[package]
name = "peekaboo"
version = "0.1.0"
edition = "2021"
authors = ["annieversary <annie@versary.town>"]
description = "Peekable iterator that allows to peek the next `N` elements without consuming them."
license = "MIT OR Apache-2.0"
keywords = ["peekable", "peek", "iterator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
