[package]
name = "peekaboo"
version = "0.3.0"
edition = "2021"
authors = ["annieversary <annie@versary.town>"]
description = "Peekable iterator that allows to peek the next `N` elements without consuming them."
license = "MIT OR Apache-2.0"
keywords = ["peekable", "peek", "iterator"]
repository = "https://github.com/annieversary/peekaboo"
readme = "README.md"

[dependencies]
